# perturbations

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml
audio/ween_rosesarefree/raw/: 1-31-2008 Part_0108.flac  ween00.05.18d1T14.flac  ween1999-08-02t17.flac  ween2000-05-08-d1t10.flac  ween2000-05-09d1t05.flac  ween2000-06-18d1t13.flac  ween2003-10-03d1t17.flac  ween2004-10-16_wiltern_t22.flac  ween2008-03-07t17.flac
docs/: erfassungsbogen.md  exposé.md  thesis-flow-graph.canvas
docs/01-literature/: paper-overview.base  to-read.md
docs/01-literature/dump/: to-read.md
docs/01-literature/summaries/: Arora2024_audio-augmentation-article.md  abe2025_TPE-extension.md  arguello2024_cue-estimation.md  aristorenas2024_evaluation-framework.md  boeck2016_madmom.md  borovik2023_score-performer.md  chiu2021_augmentation-beattracking.md  chung2025_kad.md  delgado2022_peaq-relevance.md  engel2019_ddsp.md  friberg2006_kth-rulesystem.md  (+42 more)
docs/02-data/: data-notes.md  datasets.md  feature-comparison.md  features.md
docs/03-pipeline/: cue-extraction.md  music-aware-approach.md  pipeline-composition.md  pipeline.canvas
docs/04-optimization/: bayesian-optimization.md  parallelization.md
docs/05-evaluation/: baseline-comparison.md  evaluation-framework.md  kad.md  kl-divergence.md
docs/10-resources/: libs.md
docs/graphs/: phase-2-graph.canvas  phase-3-graph.canvas  phase-4-graph.canvas  thesis-flow-graph.canvas
docs/resources/: libs.md  links.md
docs/zzz.resources/: libs.md
src/perturbations/: consts.py  feature_extract.py  main.py  types.py
(+14 files in other folders)
